--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ python:
   
 
 install:
-  - pip install django
-  - pip install
+  - pip install -r requirements.txt
 
 script: python manage.py test
